option('simd',
       type: 'combo',
       choices: ['auto', 'none', 'sse2', 'avx2', 'avx512', 'neon'],
       value: 'auto',
       description: 'SIMD backend selection')

option('with_gmp',
       type: 'boolean',
       value: false,
       description: 'Use GMP for exact large integer counts')

option('with_json',
       type: 'boolean',
       value: false,
       description: 'Build JSON-based import/export utilities')

option('build_fuzzers',
       type: 'boolean',
       value: false,
       description: 'Build parser fuzz targets')

option('qiskit_tests',
       type: 'boolean',
       value: false,
       description: 'Enable optional qasm2sop amplitude comparisons against Qiskit')

option('developer_warnings',
       type: 'boolean',
       value: true,
       description: 'Enable strict compiler warnings')
