option('with_gmp',
       type: 'boolean',
       value: false,
       description: 'Use GMP for exact large integer counts (planned; not yet wired)')

option('with_json',
       type: 'boolean',
       value: false,
       description: 'Build JSON-based import/export utilities (planned; not yet wired)')

option('build_fuzzers',
       type: 'boolean',
       value: false,
       description: 'Build parser fuzz targets')

option('qiskit_tests',
       type: 'boolean',
       value: false,
       description: 'Enable optional qasm2sop amplitude comparisons against Qiskit')

option('ganak_tests',
       type: 'boolean',
       value: false,
       description: 'Enable optional sop2wmc residue-count comparisons against an installed Ganak')

option('developer_warnings',
       type: 'boolean',
       value: true,
       description: 'Enable strict compiler warnings')

option('simd',
       type: 'combo',
       choices: ['auto', 'scalar', 'neon', 'avx2', 'avx512'],
       value: 'auto',
       description: 'SIMD kernels to compile in; the best one this CPU supports is selected at run time. "auto" compiles every kernel the compiler can emit for the target')
